# tablerpy

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: release.yml  test.yml
scripts/: generator.py
src/tablerpy/: __init__.py  filled.py  outline.py
tests/: test_tablerpy.py
